--- a/BERT_Task_Training.ipynb
+++ b/BERT_Task_Training.ipynb
@@ -478,6 +478,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.save(model.state_dict(), 'Model_Task_weights')"
+      ],
+      "metadata": {
+        "id": "MsPSvYc4wNvG"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
