--- a/BERT_Task_Training.ipynb
+++ b/BERT_Task_Training.ipynb
@@ -52,7 +52,7 @@
       "source": [
         "#Loading the Domain Specific Trained Model \n",
         "model = BertForMaskedLM.from_pretrained('bert-base-uncased')\n",
-        "model.load_state_dict(torch.load('Path to stored weights - Domain Training'))\n",
+        "model.load_state_dict(torch.load('Model_Domain_weigths'))\n",
         "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')"
       ],
       "metadata": {
